# vpnhide

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README.ru.md
.githooks/: pre-commit
.github/docker/ci/: Dockerfile
.github/workflows/: ci.yml
docs/: changelog.md  development.md  releasing.md
kmod/: BUILDING.md  README.md  vpnhide_kmod.c
kmod/module/: module.prop  service.sh
lsposed/: README.md
lsposed/app/: build.gradle.kts
lsposed/app/src/main/: AndroidManifest.xml
lsposed/app/src/main/assets/: changelog.json
lsposed/app/src/main/kotlin/dev/okhsunrog/vpnhide/: AppHidingScreen.kt  DashboardData.kt  DashboardScreen.kt  DiagnosticsScreen.kt  HookEntry.kt  LogcatRecorder.kt  MainActivity.kt  NativeChecks.kt  ProtectionScreen.kt  ShellUtils.kt
lsposed/app/src/main/res/values/: strings.xml
lsposed/app/src/main/res/values-ru/: strings.xml
lsposed/native/: Cargo.toml
lsposed/native/src/: lib.rs
portshide/: README.md  build-zip.sh
portshide/module/: customize.sh  module.prop  service.sh  uninstall.sh
scripts/: update-json.sh  update-version.sh
test-app/: build-native.sh
test-app/app/: build.gradle.kts
test-app/app/src/main/: AndroidManifest.xml
test-app/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
test-app/gradle/: libs.versions.toml
test-app/native/: Cargo.toml
test-app/native/src/: lib.rs
update-json/: changelog.md
zygisk/: Cargo.toml  README.md  build.rs
zygisk/module/: module.prop  service.sh
zygisk/module/webroot/: index.html
zygisk/src/: filter.rs  hooks.rs  lib.rs  shadowhook.rs
(+1 files in other folders)
